Data de las líneas

--- a/data/linea-b.html
+++ b/data/linea-b.html
@@ -19,15 +19,32 @@
 			<h1>L&iacute;nea B</h1>
 		</div>
 		
-		<div data-role="content" data-theme="c">
-			
-			<h3>Esta es la info de la linea B</h3>
+		<div data-role="content" data-theme="c" class="contenido">
 
-			<p>lalalala lalala lala</p>
-			<p>lalalala lalala lala</p>
-			<p>lalalala lalala lala</p>
-			<p>lalalala lalala lala</p>
-			<p>lalalala lalala lala</p>
+			<img src="../images/linea-b.jpg" alt="L&iacute;nea B">
+
+			<p>La l&iacute;nea B del subte de Buenos Aires, abierta al p&uacute;blico el 17 de octubre de 1930, se extiende a lo largo de 10,15 km entre Leandro N. Alem y Los Incas / Parque Chas. &Eacute;sta fue la &uacute;ltima estaci&oacute;n inaugurada de la l&iacute;nea, a mediados de 2003. En los &uacute;ltimos a&ntilde;os, ha ostentado el t&iacute;tulo de ser la l&iacute;nea m&aacute;s utilizada por los porte&ntilde;os.</p>
+
+			<h4>Recorrido:</h4>
+			<ul data-role="listview" data-inset="true">
+				<li><a href="#">Leandro N. Alem</a></li>
+				<li><a href="#">Florida</a></li>
+				<li><a href="#">Carlos Pellegrini</a></li>
+				<li><a href="#">Uruguay</a></li>
+				<li><a href="#">Callao</a></li>
+				<li><a href="#">Pasteur</a></li>
+				<li><a href="#">Pueyrred&oacute;n</a></li>
+				<li><a href="#">Carlos Gardel</a></li>
+				<li><a href="#">Medrano</a></li>
+				<li><a href="#">&aacute;ngel Gallardo</a></li>
+				<li><a href="#">Malabia</a></li>
+				<li><a href="#">Dorrego FCGSM</a></li>
+				<li><a href="#">Federico Lacroze FCGU</a></li>
+				<li><a href="#">Tronador</a></li>
+				<li><a href="#">Los Incas</a></li>
+				<li><a href="#">Echeverr&iacute;a (Prox)</a></li>
+				<li><a href="#">Juan Manuel de Rosas FCGBM (Prox)</a></li>
+			</ul>
 
 			<a href="../index.html" data-role="button" data-theme="a" data-icon="home" class="btn-back" rel="external">Volver</a>
 		</div>
