--- a/data/linea-e.html
+++ b/data/linea-e.html
@@ -19,15 +19,33 @@
 			<h1>L&iacute;nea E</h1>
 		</div>
 		
-		<div data-role="content" data-theme="c">
-			
-			<h3>Esta es la info de la linea E</h3>
+		<div data-role="content" data-theme="c" class="contenido">
 
-			<p>lalalala lalala lala</p>
-			<p>lalalala lalala lala</p>
-			<p>lalalala lalala lala</p>
-			<p>lalalala lalala lala</p>
-			<p>lalalala lalala lala</p>
+			<img src="../images/linea-e.jpg" alt="L&iacute;nea E">
+			
+			<p>La l&iacute;nea E del subte de Buenos Aires corre desde la Plaza de Mayo, en el Microcentro porte&ntilde;o (estaci&oacute;n Bol&iacute;var) hasta el Barrio de Flores (estaci&oacute;n Plaza de los Virreyes), donde combina con la l&iacute;nea E2, m&aacute;s conocida como Premetro. Se abri&oacute; al p&uacute;blico el 20 de junio de 1944.</p>
+
+			<h4>Recorrido:</h4>
+			<ul data-role="listview" data-inset="true">
+				<li><a href="#">Estaci&oacute;n Retiro FFCC (Prox)</a></li>
+				<li><a href="#">Catalinas (Prox)</a></li>
+				<li><a href="#">Correo Central (Prox)</a></li>
+				<li><a href="#">Bol&iacute;var</a></li>
+				<li><a href="#">Belgrano</a></li>
+				<li><a href="#">Independencia</a></li>
+				<li><a href="#">San Jos&eacute;</a></li>
+				<li><a href="#">Entre Rios</a></li>
+				<li><a href="#">Pichincha</a></li>
+				<li><a href="#">Jujuy</a></li>
+				<li><a href="#">General Urquiza</a></li>
+				<li><a href="#">Boedo</a></li>
+				<li><a href="#">Avenida La Plata</a></li>
+				<li><a href="#">Jos&eacute; Mar&iacute;a Moreno</a></li>
+				<li><a href="#">Emilio Mitre</a></li>
+				<li><a href="#">Medalla Milagrosa</a></li>
+				<li><a href="#">Varela</a></li>
+				<li><a href="#">Plaza de los Virreyes</a></li>
+			</ul>
 
 			<a href="../index.html" data-role="button" data-theme="a" data-icon="home" class="btn-back" rel="external">Volver</a>
 		</div>
