--- a/data/linea-h.html
+++ b/data/linea-h.html
@@ -19,15 +19,30 @@
 			<h1>L&iacute;nea H</h1>
 		</div>
 		
-		<div data-role="content" data-theme="c">
+		<div data-role="content" data-theme="c" class="contenido">
 			
-			<h3>Esta es la info de la linea H</h3>
+			<img src="../images/linea-h.jpg" alt="L&iacute;nea H">
 
-			<p>lalalala lalala lala</p>
-			<p>lalalala lalala lala</p>
-			<p>lalalala lalala lala</p>
-			<p>lalalala lalala lala</p>
-			<p>lalalala lalala lala</p>
+			<p>La l&iacute;nea H del Subte de Buenos Aires, inaugurada el 18 de octubre de 2007, se extiende a lo largo de 5,5 km entre las estaciones Corrientes - Parque Patricios. Es la primera l&iacute;nea totalmente nueva desde la habilitaci&oacute;n de la l&iacute;nea E, a fines de la d&eacute;cada del 40. De acuerdo a las proyecciones, la l&iacute;nea terminada tendr&aacute; una extensi&oacute;n total de aproximadamente 11 km y se extender&aacute; entre las estaciones Nueva Pompeya y Retiro. Est&aacute; proyectada adem&aacute;s para servir como l&iacute;nea transversal a todas las l&iacute;neas radiales, principalmente bajo el eje de las avenidas Jujuy y Pueyrred&oacute;n.</p>
+
+			<h4>Recorrido:</h4>
+			<ul data-role="listview" data-inset="true">
+				<li><a href="#">Estaci&oacute;n Retiro FFCC (Prox)</a></li>
+				<li><a href="#">9 de Julio (Prox)</a></li>
+				<li><a href="#">Plaza Francia (Prox)</a></li>
+				<li><a href="#">Las Heras (Prox)</a></li>
+				<li><a href="#">Santa Fe (Prox)</a></li>
+				<li><a href="#">C&oacute;rdoba (Prox)</a></li>
+				<li><a href="#">Corrientes</a></li>
+				<li><a href="#">Once</a></li>
+				<li><a href="#">Venezuela</a></li>
+				<li><a href="#">Humberto I</a></li>
+				<li><a href="#">Inclan</a></li>
+				<li><a href="#">Caseros</a></li>
+				<li><a href="#">Parque Patricios</a></li>
+				<li><a href="#">Hospitales (Prox)</a></li>
+				<li><a href="#">S&aacute;enz FCBS (Prox)</a></li>
+			</ul>
 
 			<a href="../index.html" data-role="button" data-theme="a" data-icon="home" class="btn-back" rel="external">Volver</a>
 		</div>
