--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<!-- Home - Contiene las lista con las líneas de subtes -->
 	<div data-role="page" id="home">
 		<div data-role= "header" data-position="fixed" data-fullscreen="true">
-			<h1>Home</h1>
+			<h1>L&iacute;neas</h1>
 		</div><!-- End Header -->
 		<div data-role="content" data-theme="c">
 			<ul id="lineas">
@@ -84,6 +84,7 @@
 		
 		<div data-role="content" data-theme="c">
 			
+			<p>Acá va a ir un Mapa de Google Maps :)</p>
 
 		</div>
 	
@@ -106,6 +107,7 @@
 		
 		<div data-role="content" data-theme="c">
 			
+			<p>Acá va a ir un Mapa con las estaciones mas proximas a tu posición ;)</p>
 
 		</div>
 	
