--- a/data/linea-c.html
+++ b/data/linea-c.html
@@ -19,15 +19,24 @@
 			<h1>L&iacute;nea C</h1>
 		</div>
 		
-		<div data-role="content" data-theme="c">
+		<div data-role="content" data-theme="c" class="contenido">
 			
-			<h3>Esta es la info de la linea C</h3>
+			<img src="../images/linea-c.jpg" alt="L&iacute;nea C">
 
-			<p>lalalala lalala lala</p>
-			<p>lalalala lalala lala</p>
-			<p>lalalala lalala lala</p>
-			<p>lalalala lalala lala</p>
-			<p>lalalala lalala lala</p>
+			<p>La l&iacute;nea C del subte de Buenos Aires fue abierta al p&uacute;blico el 9 de noviembre de 1934, se extiende a lo largo de 4,4 km entre las estaciones Retiro y Constituci&oacute;n. Corre por debajo de las calles Lima Sur, Bernardo de Irigoyen, Carlos Pellegrini, Esmeralda, la Plaza San Mart&iacute;n y la Avenida Ramos Mej&iacute;a sucesivamente hasta llegar a su terminal de Retiro. Fue la tercera l&iacute;nea de la red en brindar servicio al p&uacute;blico, luego de que lo hicieran las l&iacute;neas A y B.</p>
+
+			<h4>Recorrido:</h4>
+			<ul data-role="listview" data-inset="true">
+				<li><a href="#">Estaci&oacute;n Retiro FFCC</a></li>
+				<li><a href="#">General San Mart&iacute;n</a></li>
+				<li><a href="#">Lavalle</a></li>
+				<li><a href="#">Diagonal Norte</a></li>
+				<li><a href="#">Avenida de Mayo</a></li>
+				<li><a href="#">Moreno</a></li>
+				<li><a href="#">Independencia</a></li>
+				<li><a href="#">San Juan</a></li>
+				<li><a href="#">Estaci&oacute;n Constituci&oacute;n FCGR</a></li>
+			</ul>
 
 			<a href="../index.html" data-role="button" data-theme="a" data-icon="home" class="btn-back" rel="external">Volver</a>
 		</div>
