--- a/data/linea-d.html
+++ b/data/linea-d.html
@@ -19,15 +19,31 @@
 			<h1>L&iacute;nea D</h1>
 		</div>
 		
-		<div data-role="content" data-theme="c">
-			
-			<h3>Esta es la info de la linea D</h3>
+		<div data-role="content" data-theme="c" class="contenido">
 
-			<p>lalalala lalala lala</p>
-			<p>lalalala lalala lala</p>
-			<p>lalalala lalala lala</p>
-			<p>lalalala lalala lala</p>
-			<p>lalalala lalala lala</p>
+			<img src="../images/linea-d.jpg" alt="L&iacute;nea D">
+			
+			<p>La L&iacute;nea D del Subte de Buenos Aires es una de las actuales 6 l&iacute;neas que componen la red de subterr&aacute;neos. Cuenta con 16 estaciones y 10,41 km. de largo. Combina con las L&iacute;neas A y E en Catedral y las l&iacute;neas B y C en 9 de Julio. Fue abierta al p&uacute;blico en su tramo inaugural el 3 de junio de 1937.</p>
+
+			<h4>Recorrido:</h4>
+			<ul data-role="listview" data-inset="true">
+				<li><a href="#">Catedral</a></li>
+				<li><a href="#">9 de Julio</a></li>
+				<li><a href="#">Tribunales</a></li>
+				<li><a href="#">Callao</a></li>
+				<li><a href="#">Facultad de Medicina</a></li>
+				<li><a href="#">Pueyrred&oacute;n</a></li>
+				<li><a href="#">Agüero</a></li>
+				<li><a href="#">Bulnes</a></li>
+				<li><a href="#">Scalabrini Ortiz</a></li>
+				<li><a href="#">Plaza Italia</a></li>
+				<li><a href="#">Palermo FCGSM</a></li>
+				<li><a href="#">Ministro Carranza FCGBM</a></li>
+				<li><a href="#">Olleros</a></li>
+				<li><a href="#">Jos&eacute; Hern&aacute;ndez</a></li>
+				<li><a href="#">Juramento</a></li>
+				<li><a href="#">Congreso de Tucum&aacute;n</a></li>
+			</ul>
 
 			<a href="../index.html" data-role="button" data-theme="a" data-icon="home" class="btn-back" rel="external">Volver</a>
 		</div>
